# template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  cargo-generate.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  cd.yaml  cd.yml  ci.yml  clippy.yml  fmt.yml  template_values.toml
src/: main.rs
template/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml
template/.github/: PULL_REQUEST_TEMPLATE.md
template/.github/ISSUE_TEMPLATE/: bug_report.md
template/.github/workflows/: audit.yml  cd.yml  ci.yml
template/src/: main.rs
