[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"
description = "{{project-name}} mandatory description"
repository = "https://github.com/{{username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
